@@ -3,6 +3,8 @@ mlr_2.6:
 - regr.lm: removed some erroneous param settings
 - regr.glmnet: added 'family' param and allowed 'gaussian', but also 'poisson'
 - disabled plotViperCharts unit tests as VC seems to be offline currently
+- multilabel: improve few task getter functions, especially getTaskFormula is
+  now correct
 
 new learners
 -- regr.glmboost
